# UtiLispC

./: README.md
Source_Images/: utilispc-19900716.tar.Z
utilispc-1.14/: BUGS  CHANGES  Makefile.in  configure  configure.in
utilispc-1.14/benchmark/: bench.l  fact.l
utilispc-1.14/doc/: aplispman.ps  utilisp.texi
utilispc-1.14/lib/: Makefile.in  apsys.l  lispsys.l  makeall.l
utilispc-1.14/lib/lispcomp/: c-fix.l  c-map.l  comprc.l  opt.l
utilispc-1.14/lib/lisplib/: Makefile.in  common.l  deftype.l  defun.l  makeall.l  num2str.l  pkr.l  rind.l  save.l  sort.l  struct.l  toplevel.l
utilispc-1.14/src/: Mkversion  apilisp.c  aplib.c  bignum-sparc-sunos5.s  bignum.c  config.h.in  constdef.h  defvar.h  err.c  eval.c  gc.c  init.c  input.c  main.c  makecode.c  output.c  proglink.c  savereg-sparc-sunos5.s  setjmp-ap1000-sunos5.s  signal-i386-sunos5.c  signal-mips.c  signal-sparc-sunos4.c  sysdep.c  sysfneval.c  sysfnfix.c  sysfnflo.c  sysfnhash.c  sysfnio.c  sysfnmis.c  sysfnnum.c  sysfnpred.c  sysfnsym.c  sysfnvec.c
utilispc-1.14/testsuites/: uttestsuites
utilispc-1.14/ulx/: Makefile.in  attributes.l  buffer.l  bufmac.l  commonlib.l  comp  defsetf.l  display.l  distuti  fonts.l  image.l  input.l  loadulx.l  loadulx.m  log  resource.l  socket.c  test.l  text.l
utilispc-1.14/ulx/doc/: clx.texi  rinko.tex
utilispc-1.14/ulx/etc/: ga
utilispc-1.14/ulx/memo/: sequence.refs  type-p
utilispc-1.14/ulx/sample/: cw.fasl  draw.l  lswin.l
utilispc-1.14/ulx/tool/: con.pl  fakeserver.pl  ltags.pl  macroexpand.l  utags.pl
utilispc-NetBSD-1.13/: CHANGES  INSTALL  Makefile  Makefile.in  Memo  configure  configure.in
utilispc-NetBSD-1.13/benchmark/: prol
utilispc-NetBSD-1.13/doc/: utilisp.texi
utilispc-NetBSD-1.13/lib/: lispsys.main.l
utilispc-NetBSD-1.13/lib/lispcomp/: Makefile.in  c-cd.l  c-list.l  c-pred.l  c-spec.l  comp.l  compile.l  dump.l.in  makeall.l
utilispc-NetBSD-1.13/lib/lisplib/: Makefile.in  amuse.l  description  makeall.l  newed.l  prind.l  progload.l  stingy.l  struct.l  trace.l  whatis.l
utilispc-NetBSD-1.13/src/: Makefile.in  Mkversion  alloc.c  bignum-mips.s  bignum-sparc-sunos4.s  bignum.c  cmpdef.h  config.h.in  constdef.h  defvar.h  err.c  eval.c  gc.c  init.c  input.c  output.c  proglink.c  read.h  savereg-sparc-sunos4.s  setjmp-ap1000-sunos4.s  signal-sparc-sunos5.c  sysfnap.c  sysfncd.c  sysfnerr.c  sysfnio.c  sysfnlist.c  sysfnmap.c  sysfnpred.c  sysfnspec.c  sysfnstg.c  sysfnsys.c  utilisp.il
utilispc-NetBSD-1.13/ulx/: Makefile.in  compfunc.list  compfunc.script  depdefs.l  dependent.l  distfile  gcontext.l  graphics.l  keysyms.l  loadulx.c  loadulx.l  loadulx.m  longarith.l  macros.l  manager.l  packet.l  requests.l  script  translate.l  ulx.l  ulxlib.l
utilispc-NetBSD-1.13/ulx/doc/: clientexample.tex
utilispc-NetBSD-1.13/ulx/etc/: macrolet.list
utilispc-NetBSD-1.13/ulx/lisplib/: deftype.l  struct.l
utilispc-NetBSD-1.13/ulx/memo/: defun.sequence  doc  fun  key  mac  pending-command
utilispc-NetBSD-1.13/ulx/sample/: cursor.l  cw.l  ev.l  w.l
utilispc-NetBSD-1.13/ulx/tool/: coldef.pl
